Update French localization
(Old svn revision: 4221)

--- a/po/fr.po
+++ b/po/fr.po
@@ -22,7 +22,6 @@ msgid "Select file"
 msgstr "Sélection de fichier"
 
 #: panel/settings.c:179
-#, fuzzy
 msgid "No data was found. The panel will be empty."
 msgstr "Aucune donnée n'a été trouvée. Le panneau sera vide"
 
@@ -31,9 +30,8 @@ msgid "Position:"
 msgstr "Position :"
 
 #: panel/controls_dialog.c:155
-#, fuzzy
 msgid "Item properties"
-msgstr "_Propriétés..."
+msgstr "Propriétés de l'item"
 
 #: panel/controls_dialog.c:209 panel/controls.c:691
 msgid "Removing the item will also remove its popup menu."
@@ -160,27 +158,22 @@ msgid "Xfce Panel"
 msgstr "Panneau Xfce"
 
 #: panel/panel.c:590
-#, fuzzy
 msgid "_About Xfce"
 msgstr "/À propos de _Xfce"
 
 #: panel/panel.c:595
-#, fuzzy
 msgid "_Help"
 msgstr "/_Aide"
 
 #: panel/panel.c:604
-#, fuzzy
 msgid "_Lock screen"
 msgstr "/_Verrouiller l'écran"
 
 #: panel/panel.c:609
-#, fuzzy
 msgid "_Restart"
 msgstr "/_Redémarrer"
 
 #: panel/panel.c:618
-#, fuzzy
 msgid "E_xit"
 msgstr "/Sor_tir"
 
@@ -428,9 +421,8 @@ msgstr "Bouton 2 :"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
-#, fuzzy
 msgid "_Hide"
-msgstr "/_Aide"
+msgstr "_Masquer"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -445,9 +437,8 @@ msgid "Mail box:"
 msgstr "Boîte aux lettres :"
 
 #: plugins/mailcheck/mailcheck.c:824
-#, fuzzy
 msgid "New mail command:"
-msgstr "Commande de courrier:"
+msgstr "Commande de nouveau message:"
 
 #: plugins/mailcheck/mailcheck.c:838
 msgid "Command to run when new mail arrives"
@@ -462,135 +453,6 @@ msgid "Interval (sec):"
 msgstr "Intervale (sec.) :"
 
 #: plugins/mailcheck/mailcheck.c:965
-#, fuzzy
 msgid "Mail checker"
 msgstr "Contrôle de courrier"
 
-#~ msgid "Remove"
-#~ msgstr "Supprimer"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Afficher deux boutons :"
-
-#~ msgid "Change item"
-#~ msgstr "Modifier l'entrée"
-
-#~ msgid "Menu:"
-#~ msgstr "Menu :"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Panneau Xfce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Ajouter une _nouvelle entrée"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Propriétés..."
-
-#~ msgid "New mail:"
-#~ msgstr "Nouveau message :"
-
-#~ msgid "Select icon"
-#~ msgstr "Sélection de l'icône"
-
-#~ msgid "Icon:"
-#~ msgstr "Icône:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "Prévisualisation d'icône"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Votre gestionnaire de fenêtres ne semble pas inclure le  support étendu "
-#~ "definit sur http://www.freedesktop.org. \n"
-#~ "Certaines fonctionalités de Xfce ne fonctionneront pas correctement."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Gestionnaire de _paramètres"
-
-#~ msgid "Tiny"
-#~ msgstr "Tout petit"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Thème d'icône:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Niveau du panneau:"
-
-#~ msgid "Normal"
-#~ msgstr "Normal"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centrer le panneau:"
-
-#~ msgid "Set"
-#~ msgstr "Placer"
-
-#~ msgid "Position"
-#~ msgstr "Position"
-
-#~ msgid "Sunday"
-#~ msgstr "Dimanche"
-
-#~ msgid "Monday"
-#~ msgstr "Lundi"
-
-#~ msgid "Tuesday"
-#~ msgstr "Mardi"
-
-#~ msgid "Wednesday"
-#~ msgstr "Mercredi"
-
-#~ msgid "Thursday"
-#~ msgstr "Jeudi"
-
-#~ msgid "Friday"
-#~ msgstr "Vendredi"
-
-#~ msgid "Saturday"
-#~ msgstr "Samedi"
-
-#~ msgid "January"
-#~ msgstr "Janvier"
-
-#~ msgid "February"
-#~ msgstr "Février"
-
-#~ msgid "March"
-#~ msgstr "Mars"
-
-#~ msgid "April"
-#~ msgstr "Avril"
-
-#~ msgid "May"
-#~ msgstr "Mai"
-
-#~ msgid "June"
-#~ msgstr "Juin"
-
-#~ msgid "July"
-#~ msgstr "Juillet"
-
-#~ msgid "August"
-#~ msgstr "Août"
-
-#~ msgid "September"
-#~ msgstr "Septembre"
-
-#~ msgid "October"
-#~ msgstr "Octobre"
-
-#~ msgid "November"
-#~ msgstr "Novembre"
-
-#~ msgid "December"
-#~ msgstr "Décembre"
-
-#~ msgid "_Done"
-#~ msgstr "_Terminé"
-
-#~ msgid "Type:"
-#~ msgstr "Type:"
