Improve French translation.
(Old svn revision: 4222)

--- a/po/fr.po
+++ b/po/fr.po
@@ -31,15 +31,15 @@ msgstr "Position :"
 
 #: panel/controls_dialog.c:155
 msgid "Item properties"
-msgstr "Propriétés de l'item"
+msgstr "Propriétés de l'élément"
 
 #: panel/controls_dialog.c:209 panel/controls.c:691
 msgid "Removing the item will also remove its popup menu."
-msgstr "Supprimer une entrée va supprimer le menu associé."
+msgstr "Supprimer cet élément va supprimer le menu associé."
 
 #: panel/item_dialog.c:123 panel/item_dialog.c:551
 msgid "Select command"
-msgstr "Sélection de la commande :"
+msgstr "Sélection de la commande"
 
 #: panel/item_dialog.c:264
 msgid "Command:"
@@ -75,7 +75,7 @@ msgstr "Associer un menu au lanceur"
 
 #: panel/item_dialog.c:1194
 msgid "Change menu item"
-msgstr "Changer une entrée de menu"
+msgstr "Changer un élément du menu"
 
 #. add buttons
 #: panel/item_dialog.c:1200 panel/controls.c:728
@@ -88,7 +88,7 @@ msgstr "Lanceur"
 
 #: panel/item.c:496
 msgid "Click mouse button 3 to change item"
-msgstr "Cliquer avec le bouton 3 pour modifier une entrée"
+msgstr "Cliquer avec le bouton 3 pour modifier un élément"
 
 #: panel/item.c:521
 msgid "Add launcher"
@@ -138,7 +138,7 @@ msgstr "%s: Démarrage réussit avec gestion de session"
 #: panel/controls.c:646
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr "Impossible de créer l'entrée du panneau \"%s\"."
+msgstr "Impossible de créer l'élément du panneau \"%s\"."
 
 #: panel/controls.c:723 panel/panel.c:585
 msgid "_Properties..."
@@ -146,7 +146,7 @@ msgstr "_Propriétés..."
 
 #: panel/controls.c:737 panel/panel.c:575
 msgid "Add _new item"
-msgstr "Ajouter une _nouvelle entrée"
+msgstr "Ajouter un _nouvel élément"
 
 #: panel/controls.c:1020
 msgid "This item has no configuration options"
@@ -159,23 +159,23 @@ msgstr "Panneau Xfce"
 
 #: panel/panel.c:590
 msgid "_About Xfce"
-msgstr "/À propos de _Xfce"
+msgstr "À propos de _Xfce"
 
 #: panel/panel.c:595
 msgid "_Help"
-msgstr "/_Aide"
+msgstr "_Aide"
 
 #: panel/panel.c:604
 msgid "_Lock screen"
-msgstr "/_Verrouiller l'écran"
+msgstr "_Verrouiller l'écran"
 
 #: panel/panel.c:609
 msgid "_Restart"
-msgstr "/_Redémarrer"
+msgstr "_Redémarrer"
 
 #: panel/panel.c:618
 msgid "E_xit"
-msgstr "/Sor_tir"
+msgstr "Sor_tir"
 
 #: panel/icons.c:63
 msgid "Default"
@@ -279,15 +279,15 @@ msgstr "Bas"
 
 #: settings/xfce_settings_dialog.c:269
 msgid "Panel size:"
-msgstr "Taille du panneau:"
+msgstr "Taille du panneau: "
 
 #: settings/xfce_settings_dialog.c:285
 msgid "Panel orientation:"
-msgstr "Orientation du panneau:"
+msgstr "Orientation du panneau :"
 
 #: settings/xfce_settings_dialog.c:304
 msgid "Popup position:"
-msgstr "Position du popup:"
+msgstr "Position du bouton d'ouverture :"
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
@@ -295,7 +295,7 @@ msgstr "Toujours au dessus :"
 
 #: settings/xfce_settings_dialog.c:396
 msgid "Autohide:"
-msgstr "Masquer automatiquement:"
+msgstr "Masquer automatiquement :"
 
 #: settings/xfce_settings_dialog.c:466
 msgid "Xfce Panel Settings"
@@ -438,7 +438,7 @@ msgstr "Boîte aux lettres :"
 
 #: plugins/mailcheck/mailcheck.c:824
 msgid "New mail command:"
-msgstr "Commande de nouveau message:"
+msgstr "Commande de nouveau message :"
 
 #: plugins/mailcheck/mailcheck.c:838
 msgid "Command to run when new mail arrives"
