Update NEWS and ChangeLog
(Old svn revision: 4233)

--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,14 @@
 NEWS for xfce4-panel
 ====================
 
+4.1.99.2 (4.2-RC2)
+==================
 - Increase plugin API version. Plugins build against a panel older than RC1
   need to be rebuild (Jasper)
 
 - Fix two bugs in the graphical pager (Jasper, Olivier)
+
+- Translation updates (Jean-Francois)
 
 
 4.1.99.1 (4.2 RC1)
