update KO translations and add screenshots in xfprint doc
(Old svn revision: 4238)

--- a/po/ko.po
+++ b/po/ko.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-10-29 11:29+0200\n"
-"PO-Revision-Date: 2004-11-24 16:34+0900\n"
+"PO-Revision-Date: 2004-11-27 22:36+0900\n"
 "Last-Translator: ByungHyun Choi<byunghyunchoi@rtlinux.or.kr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -144,11 +144,11 @@ msgstr "이 아이템은 속성을 정의할 수 없습니다."
 #: panel/panel.c:566 panel/panel.c:980 settings/xfce_settings_plugin.c:86
 #: settings/xfce_settings_dialog.c:449
 msgid "Xfce Panel"
-msgstr "XFcae 패널"
+msgstr "Xfce 패널"
 
 #: panel/panel.c:590
 msgid "_About Xfce"
-msgstr "Xfce에 대하여...(_A)"
+msgstr "Xfce는(_A)..."
 
 #: panel/panel.c:595
 msgid "_Help"
@@ -260,7 +260,7 @@ msgstr "우측"
 
 #: settings/xfce_settings_dialog.c:230
 msgid "Top"
-msgstr "맨위"
+msgstr "위"
 
 #: settings/xfce_settings_dialog.c:234
 msgid "Bottom"
@@ -308,7 +308,7 @@ msgstr "동작"
 #.
 #: plugins/clock/clock.c:202
 msgid "%A, %d %B %Y"
-msgstr "%Y %m %d %A"
+msgstr "%Y-%m-%d %A"
 
 #: plugins/clock/clock.c:429
 msgid "Clock type:"
@@ -316,7 +316,7 @@ msgstr "시계 형태:"
 
 #: plugins/clock/clock.c:442
 msgid "Analog"
-msgstr "아나로그"
+msgstr "아날로그"
 
 #: plugins/clock/clock.c:446
 msgid "Digital"
@@ -352,11 +352,11 @@ msgstr "Xfce 시계"
 
 #: plugins/pager/pager.c:311
 msgid "Number of rows:"
-msgstr ""
+msgstr "몇 줄:"
 
 #: plugins/pager/pager.c:313
 msgid "Number of columns:"
-msgstr ""
+msgstr "몇 열:"
 
 #: plugins/pager/pager.c:360
 msgid "Graphical pager"
