update KO translations
(Old svn revision: 4246)

--- a/po/ko.po
+++ b/po/ko.po
@@ -117,12 +117,12 @@ msgstr ""
 #: panel/main.c:488
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "세션관리 없이 %s를(을) 시작했습니다."
 
 #: panel/main.c:493
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "세션을 관리하면서 %s를(을) 시작했습니다."
 
 #: panel/controls.c:646
 #, c-format
