--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -9,85 +9,79 @@ msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-10-29 11:29+0200\n"
-"PO-Revision-Date: 2004-01-18 12:26-0200\n"
-"Last-Translator: Felix da Silva Costa <felix@online.eti.br>\n"
-"Language-Team: pt_BR <felix@online.eti.br>\n"
+"PO-Revision-Date: 2004-12-10 14:23-0300\n"
+"Last-Translator: Rodrigo Coacci <rcoacci@gmail.com>\n"
+"Language-Team: pt_BR <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: panel/xfce_support.c:516
+#: panel/xfce_support.c:556
 msgid "Select file"
 msgstr "Selecionar arquivo"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
-msgstr ""
+msgstr "Nenhum dado encontrado. O painel estará vazio."
 
-#: panel/controls_dialog.c:89 panel/item_dialog.c:1157
+#: panel/controls_dialog.c:89 panel/item_dialog.c:1161
 msgid "Position:"
 msgstr "Posição:"
 
 #: panel/controls_dialog.c:155
-#, fuzzy
 msgid "Item properties"
-msgstr "/_Propriedaddes..."
+msgstr "Propriedades do item"
 
-#: panel/controls_dialog.c:209 panel/controls.c:691
-#, fuzzy
+#: panel/controls_dialog.c:209 panel/controls.c:711
 msgid "Removing the item will also remove its popup menu."
-msgstr ""
-"Remover um item também remove o menu popup.\n"
-"\n"
-"Você deseja remover este item?"
+msgstr "Remover o item causará a remoção do respectivo menu popup."
 
-#: panel/item_dialog.c:123 panel/item_dialog.c:551
+#: panel/item_dialog.c:124
 msgid "Select command"
 msgstr "Selecionar comando"
 
-#: panel/item_dialog.c:264
+#: panel/item_dialog.c:268
 msgid "Command:"
 msgstr "Comando:"
 
-#: panel/item_dialog.c:307
+#: panel/item_dialog.c:311
 msgid "Run in _terminal"
-msgstr "Executar em _terminal"
+msgstr "Executar no _terminal"
 
-#: panel/item_dialog.c:325
+#: panel/item_dialog.c:329
 msgid "Use startup _notification"
-msgstr "Use _notificação na inicialização"
+msgstr "Use a _notificação de inicialização"
 
-#: panel/item_dialog.c:511
+#: panel/item_dialog.c:515
 msgid "Other Icon"
 msgstr "Outro ícone"
 
-#: panel/item_dialog.c:622
+#: panel/item_dialog.c:626
 msgid "Drag file onto this frame to change the icon"
-msgstr "Arraste o arquivo até este frame para alterar o ícone"
+msgstr "Arraste o arquivo até este quadro para alterar o ícone"
 
-#: panel/item_dialog.c:917
+#: panel/item_dialog.c:921
 msgid "Caption:"
 msgstr "Etiqueta:"
 
-#: panel/item_dialog.c:946
+#: panel/item_dialog.c:950
 msgid "Tooltip:"
-msgstr "Dicas:"
+msgstr "Dica:"
 
-#: panel/item_dialog.c:974
+#: panel/item_dialog.c:978
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "Adicionar menu ao lançador"
 
-#: panel/item_dialog.c:1194
+#: panel/item_dialog.c:1198
 msgid "Change menu item"
 msgstr "Mudar item do menu"
 
 #. add buttons
-#: panel/item_dialog.c:1200 panel/controls.c:728
-#, fuzzy
+#: panel/item_dialog.c:1204 panel/controls.c:748
 msgid "_Remove"
-msgstr "/_Remover"
+msgstr "_Remover"
 
-#: panel/item_dialog.c:1212 panel/item.c:668
+#: panel/item_dialog.c:1216 panel/item.c:668
 msgid "Launcher"
 msgstr "Lançador"
 
@@ -108,7 +102,7 @@ msgid "Are you sure you want to exit?"
 msgstr "Tem certeza que deseja sair?"
 
 #: panel/main.c:401
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -120,68 +114,67 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, versão %s\n"
-"Parte do Ambiente Desktop Xfce\n"
-"http://www.xfce.org\n"
+"\n"
+" O Painel do Xfce\n"
+" Versão %s\n"
+"\n"
+" Parte do Xfce Desktop Environment\n"
+" http://www.xfce.org\n"
+"\n"
+" Licenciado sob o GNU GPL.\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "%s: Iniciado com sucesso sem gerenciamento de sessão"
 
 #: panel/main.c:493
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "%s: Iniciado corretamente com gerenciamento de sessão"
 
-#: panel/controls.c:646
+#: panel/controls.c:666
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr ""
+msgstr "Não foi possível criar o item de painel \"%s\"."
 
-#: panel/controls.c:723 panel/panel.c:585
-#, fuzzy
+#: panel/controls.c:743 panel/panel.c:639
 msgid "_Properties..."
-msgstr "/_Propriedaddes..."
+msgstr "_Propriedades..."
 
-#: panel/controls.c:737 panel/panel.c:575
-#, fuzzy
+#: panel/controls.c:757 panel/panel.c:629
 msgid "Add _new item"
-msgstr "/Adicionar _novo item"
+msgstr "Adicionar _novo item"
 
-#: panel/controls.c:1020
+#: panel/controls.c:1040
 msgid "This item has no configuration options"
 msgstr "Este item não possui opções de configuração"
 
-#: panel/panel.c:566 panel/panel.c:980 settings/xfce_settings_plugin.c:86
-#: settings/xfce_settings_dialog.c:449
+#: panel/panel.c:620 panel/panel.c:1042 settings/xfce_settings_plugin.c:86
+#: settings/xfce_settings_dialog.c:451
 msgid "Xfce Panel"
 msgstr "Painel Xfce"
 
-#: panel/panel.c:590
-#, fuzzy
+#: panel/panel.c:644
 msgid "_About Xfce"
-msgstr "/_Sobre Xfce"
+msgstr "_Sobre o Xfce"
 
-#: panel/panel.c:595
-#, fuzzy
+#: panel/panel.c:649
 msgid "_Help"
-msgstr "/_Ajuda"
+msgstr "_Ajuda"
 
-#: panel/panel.c:604
-#, fuzzy
+#: panel/panel.c:658
 msgid "_Lock screen"
-msgstr "/_Travar tela"
+msgstr "_Travar tela"
 
-#: panel/panel.c:609
-#, fuzzy
+#: panel/panel.c:663
 msgid "_Restart"
-msgstr "/_Reiniciar"
+msgstr "_Reiniciar"
 
-#: panel/panel.c:618
-#, fuzzy
+#: panel/panel.c:672
 msgid "E_xit"
-msgstr "/Sai_r"
+msgstr "Sai_r"
 
 #: panel/icons.c:63
 msgid "Default"
@@ -205,7 +198,7 @@ msgstr "Jogos"
 
 #: panel/icons.c:68
 msgid "Help browser"
-msgstr ""
+msgstr "Navegador da ajuda"
 
 #: panel/icons.c:69
 msgid "Multimedia"
@@ -257,7 +250,7 @@ msgstr "Grande"
 
 #: settings/xfce_settings_dialog.c:100
 msgid "Huge"
-msgstr ""
+msgstr "Enorme"
 
 #: settings/xfce_settings_dialog.c:176
 msgid "Horizontal"
@@ -295,23 +288,23 @@ msgstr "Orientação do painel:"
 msgid "Popup position:"
 msgstr "Posição do Popup:"
 
-#: settings/xfce_settings_dialog.c:343
+#: settings/xfce_settings_dialog.c:344
 msgid "Always on top:"
-msgstr ""
+msgstr "Sempre no topo:"
 
-#: settings/xfce_settings_dialog.c:396
+#: settings/xfce_settings_dialog.c:398
 msgid "Autohide:"
 msgstr "Auto-Ocultar:"
 
-#: settings/xfce_settings_dialog.c:466
+#: settings/xfce_settings_dialog.c:468
 msgid "Xfce Panel Settings"
 msgstr "Configurações do painel do Xfce"
 
-#: settings/xfce_settings_dialog.c:476
+#: settings/xfce_settings_dialog.c:478
 msgid "Appearance"
 msgstr "Aparência"
 
-#: settings/xfce_settings_dialog.c:491
+#: settings/xfce_settings_dialog.c:493
 msgid "Behaviour"
 msgstr "Comportamento"
 
@@ -324,9 +317,8 @@ msgstr "Comportamento"
 #. * %Y  : four digit year
 #.
 #: plugins/clock/clock.c:202
-#, fuzzy
 msgid "%A, %d %B %Y"
-msgstr "%A, %-d %B %Y"
+msgstr "%A, %d de %B de %Y"
 
 #: plugins/clock/clock.c:429
 msgid "Clock type:"
@@ -346,7 +338,7 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:512
 msgid "Hour mode:"
-msgstr "Modo de horas:"
+msgstr "Estilo de hora:"
 
 #: plugins/clock/clock.c:519
 msgid "24 hour"
@@ -368,15 +360,15 @@ msgstr "Mostrar segundos:"
 msgid "Xfce Clock"
 msgstr "Relógio Xfce"
 
-#: plugins/pager/pager.c:311
+#: plugins/pager/pager.c:314
 msgid "Number of rows:"
-msgstr ""
+msgstr "Número de linhas:"
 
-#: plugins/pager/pager.c:313
+#: plugins/pager/pager.c:316
 msgid "Number of columns:"
-msgstr ""
+msgstr "Número de colunas:"
 
-#: plugins/pager/pager.c:360
+#: plugins/pager/pager.c:373
 msgid "Graphical pager"
 msgstr "Paginador gráfico"
 
@@ -390,9 +382,9 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"Acesso a configuração do sistema foi desabilitado.\n"
+"O acesso à configuração do sistema foi desabilitado.\n"
 "\n"
-"Pergunte ao administrador do sistema para mais informações"
+"Peça ao administrador do sistema mais informações"
 
 #: plugins/systembuttons/systembuttons.c:170
 msgid "Lock the screen"
@@ -428,9 +420,8 @@ msgstr "Botão 2:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
-#, fuzzy
 msgid "_Hide"
-msgstr "/_Ajuda"
+msgstr "_Ocultar"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -440,90 +431,26 @@ msgstr "Botôes de sistema"
 msgid "Separator"
 msgstr "Separador"
 
-#: plugins/mailcheck/mailcheck.c:787
+#: plugins/mailcheck/mailcheck.c:836
 msgid "Mail box:"
 msgstr "Caixa de correio:"
 
-#: plugins/mailcheck/mailcheck.c:824
-#, fuzzy
+#: plugins/mailcheck/mailcheck.c:873
 msgid "New mail command:"
-msgstr "Comando de e-mail:"
+msgstr "Novo comando de e-mail:"
 
-#: plugins/mailcheck/mailcheck.c:838
-#, fuzzy
+#: plugins/mailcheck/mailcheck.c:887
 msgid "Command to run when new mail arrives"
-msgstr "Comando a executar quando o botão no painel for clicado"
+msgstr "Comando a executar quando novo e-mail chegar"
 
-#: plugins/mailcheck/mailcheck.c:868
+#: plugins/mailcheck/mailcheck.c:917
 msgid "Command to run when the button on the panel is clicked"
 msgstr "Comando a executar quando o botão no painel for clicado"
 
-#: plugins/mailcheck/mailcheck.c:889
+#: plugins/mailcheck/mailcheck.c:938
 msgid "Interval (sec):"
 msgstr "Intevalo (segundos):"
 
-#: plugins/mailcheck/mailcheck.c:965
-#, fuzzy
+#: plugins/mailcheck/mailcheck.c:1014
 msgid "Mail checker"
-msgstr "Checar E-mail"
-
-#~ msgid "Remove"
-#~ msgstr "Remover"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Mostrar dois botôes:"
-
-#~ msgid "Change item"
-#~ msgstr "Mudar item"
-
-#~ msgid "Menu:"
-#~ msgstr "Menu:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Painel Xfce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Adicionar _novo item"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Propriedaddes..."
-
-#~ msgid "Select icon"
-#~ msgstr "Selecionar ícone"
-
-#~ msgid "Icon:"
-#~ msgstr "Ícone:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "Visualização do ícone"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Seu gerenciador de janelas parece não suportar as novas definições de "
-#~ "dicas como\n"
-#~ "definidas em http://www.freedesktop.org.\n"
-#~ "Algumas características do Xfce podem não funcionar com pretendido."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Gerenciador de _Configurações"
-
-#~ msgid "Tiny"
-#~ msgstr "Muito pequeno"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Tema dos ícones:"
-
-#~ msgid "Normal"
-#~ msgstr "Normal"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centralizar painel:"
-
-#~ msgid "Set"
-#~ msgstr "Aplicar"
-
-#~ msgid "Position"
-#~ msgstr "Posição"
+msgstr "Verificador de e-mail"
