update KO translations
(Old svn revision: 4251)

--- a/po/ko.po
+++ b/po/ko.po
@@ -113,6 +113,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
+"\n"
+" Xfce Panel\n"
+" Version %s\n"
+"\n"
+" Xfce 데스크탑 환경의 부속품입니다.\n"
+" http://www.xfce.org\n"
+"\n"
+" GNU GPL 라이선스를 따릅니다.\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
